force-app/main/default/objects/Accommodation__c/Accommodation__c.object-meta.xml
<CustomObject>
    <description>Object that holds information of Hotels and Guest Houses</description>
    <label>Accommodation</label>
    <nameField>
        <label>Accommodation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accommodations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>