force-app/main/default/objects/Accommodation__c/fields/Google_Maps_Link_to_Location__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_Link_to_Location__c</fullName>
    <inlineHelpText>Paste a link to the Google Maps location of the Accommodation here</inlineHelpText>
    <label>Google Maps Link to Location</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>