force-app/main/default/objects/Accommodation__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a valid contact or create a new one</errorMessage>
        <filterItems>
            <field>Contact.Accommodation__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accommodations</relationshipLabel>
    <relationshipName>Accommodations</relationshipName>
    <type>Lookup</type>
</CustomField>