force-app/main/default/objects/Accommodation__c/fields/Primary_Contact_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_s_Phone__c</fullName>
    <formula>Primary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact&apos;s Phone</label>
    <type>Text</type>
</CustomField>